# qudit-core

./: Cargo.toml  README.md
src/: bitwidth.rs  function.rs  lib.rs  memory.rs  perm.rs  radices.rs  radix.rs  scalar.rs  system.rs
src/accel/: frpr.rs  kron.rs  matmul.rs  mod.rs
src/matrix/: matmat.rs  matvec.rs  mod.rs
src/unitary/: function.rs  matrix.rs  mod.rs
