[package]
name = "qudit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
faer = "0.21.3"
faer-traits = "0.21.0"
aligned-vec = "0.6.1"
bytemuck = "1.21.0"
rand = "0.9.0"
num-traits = "0.2.19"
num = "0.4.3"
nano-gemm = "0.1.2"
coe-rs = "0.1.2"

[dev-dependencies]
proptest = "1.2"
criterion = "0.5"

